--- a/index.html
+++ b/index.html
@@ -13,6 +13,52 @@
 </head>
 <body>
 
+    <div id="landing-page" class="landing-overlay">
+        <header class="landing-header">
+            <div class="logo-placeholder"></div>
+            <div class="menu-burger">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+        </header>
+
+        <main class="landing-content">
+            <div class="badge-terracotta">
+                <span class="dot"></span> #1 L'appli nantaise 100% bons plans & réemploi
+            </div>
+
+            <h1 class="landing-title">
+                Trouve les meilleures pépites. <br>
+                <span class="text-green">Économise</span> et <span class="text-green">réutilise</span>.
+            </h1>
+
+            <p class="landing-desc">
+                Découvre la première carte interactive des friperies, ressourceries et réparateurs les moins chers de Nantes. Partage tes trouvailles de seconde main avec tes potes, visite nos boutiques partenaires et débloque des récompenses exclusives !
+            </p>
+
+            <div class="landing-tags">
+                <span class="tag-outline"><span class="icon">€</span> 100% Gratuit</span>
+                <span class="tag-outline"><span class="icon">📍</span> Fait pour les Nantais</span>
+            </div>
+
+            <button class="btn-primary btn-large" onclick="demarrerApp()">
+                ↓ Accéder à la carte
+            </button>
+
+            <button class="btn-video">
+                ▶ Découvrir en vidéo
+            </button>
+        </main>
+
+        <div class="landing-mockup-container">
+            <div class="mockup-css">
+                <div class="mockup-notch"></div>
+                <div class="mockup-screen">Carte interactive...</div>
+            </div>
+        </div>
+    </div>
+
     <main id="app-content">
         
         <section id="vue-map" class="vue active">
